0026016: BRepPrimAPI_MakeRevol crash

Correctly treat the case when the line is a trimmed curve.

Test-case for issue #26016